--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -53,3 +53,10 @@ sky:
   wechat:
     appid: ${sky.wechat.appid}
     secret: ${sky.wechat.secret}
+    mchid: ${sky.wechat.mchid}
+    notify-url: ${sky.wechat.notify-url}
+    private-key-file-path: ${sky.wechat.private-key-file-path}
+    we-chat-pay-cert-file-path: ${sky.wechat.we-chat-pay-cert-file-path}
+    api-v3-key: ${sky.wechat.api-v3-key}
+    mch-serial-no: ${sky.wechat.mch-serial-no}
+    refund-notify-url: ${sky.wechat.refund-notify-url}
